# log-aggregator

./: .gitignore  CMakeLists.txt  README.md  config.txt
examples/: create_sample_logs.sh  send_log.py
include/: alerter.h  config.h  log_entry.h  log_source.h  processor.h  queue.h
src/: alerter.c  config.c  log_entry.c  log_source.c  main.c  processor.c  queue.c
tests/: test_config.c  test_log_entry.c  test_main.c  test_queue.c  test_queue_gtest.cpp
